--- a/barcodrod.io/Views/SettingsPage.xaml
+++ b/barcodrod.io/Views/SettingsPage.xaml
@@ -66,7 +66,7 @@
                     Style="{ThemeResource BodyTextBlockStyle}" />
                 <StackPanel Orientation="Horizontal" Spacing="50">
                     <HyperlinkButton Content="barcodrod.io" NavigateUri="https://barcodrod.io"  Margin="{StaticResource SettingsPageHyperlinkButtonMargin}" />
-                <HyperlinkButton Content="github" NavigateUri="https://github.com/MarkHopper24/barcodrod.io"  Margin="{StaticResource SettingsPageHyperlinkButtonMargin}" />
+                <HyperlinkButton Content="GitHub" NavigateUri="https://github.com/MarkHopper24/barcodrod.io"  Margin="{StaticResource SettingsPageHyperlinkButtonMargin}" />
                 <HyperlinkButton x:Uid="SettingsPage_PrivacyTermsLink" Margin="{StaticResource SettingsPageHyperlinkButtonMargin}" />
                 </StackPanel>
             </StackPanel>
