--- a/barcodrod.io/MainWindow.xaml
+++ b/barcodrod.io/MainWindow.xaml
@@ -1,4 +1,4 @@
-<windowex:WindowEx
+﻿<windowex:WindowEx
     x:Class="barcodrod.io.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,8 +7,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:windowex="using:WinUIEx"
     MinWidth="350"
-    Width="1735"
-    Height="600"
+
     PersistenceId="MainWindow"
     mc:Ignorable="d">
     <windowex:WindowEx.Backdrop>
